c/examples/writing-a-c-compiler-tests/tests/chapter_14/valid/libraries/global_pointer.c
double *d_ptr;

int update_thru_ptr(double new_val) {
    *d_ptr = new_val;
    return 0;
}